[gd_scene load_steps=18 format=2]

[ext_resource path="res://ui/karaoke/Karaoke.gd" type="Script" id=1]
[ext_resource path="res://ui/karaoke/right_button.png" type="Texture" id=2]
[ext_resource path="res://ui/karaoke/down_button.png" type="Texture" id=3]
[ext_resource path="res://ui/karaoke/left_button.png" type="Texture" id=4]
[ext_resource path="res://ui/karaoke/up_button.png" type="Texture" id=5]
[ext_resource path="res://ui/karaoke/Input.gd" type="Script" id=6]
[ext_resource path="res://ui/smaller_font.tres" type="DynamicFont" id=7]
[ext_resource path="res://characters/maia/outfits/default/maia_1.png" type="Texture" id=8]
[ext_resource path="res://characters/maia/outfits/default/maia_2.png" type="Texture" id=9]
[ext_resource path="res://ui/karaoke/microphone.png" type="Texture" id=10]
[ext_resource path="res://ui/UITheme.tres" type="Theme" id=11]
[ext_resource path="res://ui/karaoke/Lane.gd" type="Script" id=12]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 8 ), ExtResource( 9 ) ],
"loop": true,
"name": "default",
"speed": 2.0
} ]

[sub_resource type="RectangleShape2D" id=2]

[sub_resource type="RectangleShape2D" id=3]

[sub_resource type="RectangleShape2D" id=4]

[sub_resource type="RectangleShape2D" id=5]

[node name="Karaoke" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 11 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
margin_right = 53.0
margin_bottom = 150.0
grow_vertical = 0
size_flags_horizontal = 3
custom_constants/separation = 1
alignment = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Container" type="PanelContainer" parent="HBoxContainer/VBoxContainer"]
margin_top = 124.0
margin_right = 53.0
margin_bottom = 150.0

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/VBoxContainer/Container"]
margin_left = 2.0
margin_top = 2.0
margin_right = 51.0
margin_bottom = 24.0
custom_constants/margin_left = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/VBoxContainer/Container/MarginContainer"]
margin_left = 2.0
margin_right = 49.0
margin_bottom = 22.0
custom_constants/separation = -4

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer/Container/MarginContainer/VBoxContainer"]
margin_right = 47.0
margin_bottom = 13.0
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 0.478431, 0.266667, 0.290196, 1 )
custom_colors/font_color_shadow = Color( 0.74902, 0.47451, 0.345098, 1 )
custom_constants/shadow_offset_x = 1
custom_constants/shadow_offset_y = 0
text = "Notes"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Count" type="Label" parent="HBoxContainer/VBoxContainer/Container/MarginContainer/VBoxContainer"]
margin_top = 9.0
margin_right = 47.0
margin_bottom = 22.0
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 0.478431, 0.266667, 0.290196, 1 )
custom_colors/font_color_shadow = Color( 0.74902, 0.47451, 0.345098, 1 )
custom_constants/shadow_offset_x = 1
custom_constants/shadow_offset_y = 0
text = "100/100"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="HBoxContainer"]
margin_left = 55.0
margin_right = 145.0
margin_bottom = 150.0
rect_min_size = Vector2( 90, 150 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Node2D" type="Node2D" parent="HBoxContainer/Panel"]
position = Vector2( 47, 120 )
scale = Vector2( 2, 2 )

[node name="Sprite" type="AnimatedSprite" parent="HBoxContainer/Panel/Node2D"]
frames = SubResource( 1 )
playing = true

[node name="Sprite2" type="Sprite" parent="HBoxContainer/Panel/Node2D"]
position = Vector2( -8, 6 )
texture = ExtResource( 10 )

[node name="ViewportContainer" type="ViewportContainer" parent="HBoxContainer/Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -45.0
margin_top = -75.0
margin_right = 45.0
margin_bottom = 75.0
rect_min_size = Vector2( 90, 150 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Viewport" type="Viewport" parent="HBoxContainer/Panel/ViewportContainer"]
size = Vector2( 90, 150 )
transparent_bg = true
handle_input_locally = false
disable_3d = true
usage = 0
render_target_update_mode = 3

[node name="Camera2D" type="Camera2D" parent="HBoxContainer/Panel/ViewportContainer/Viewport"]
offset = Vector2( 45, 75 )
current = true

[node name="Left" type="Area2D" parent="HBoxContainer/Panel/ViewportContainer/Viewport/Camera2D"]
position = Vector2( 12, 16 )
collision_layer = 0
collision_mask = 8
script = ExtResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="HBoxContainer/Panel/ViewportContainer/Viewport/Camera2D/Left"]
shape = SubResource( 2 )

[node name="Button" type="Sprite" parent="HBoxContainer/Panel/ViewportContainer/Viewport/Camera2D/Left"]
texture = ExtResource( 4 )

[node name="Up" type="Area2D" parent="HBoxContainer/Panel/ViewportContainer/Viewport/Camera2D"]
position = Vector2( 34, 16 )
collision_layer = 0
collision_mask = 8
script = ExtResource( 6 )
input_key = "ui_up"

[node name="CollisionShape2D" type="CollisionShape2D" parent="HBoxContainer/Panel/ViewportContainer/Viewport/Camera2D/Up"]
shape = SubResource( 3 )

[node name="Button" type="Sprite" parent="HBoxContainer/Panel/ViewportContainer/Viewport/Camera2D/Up"]
texture = ExtResource( 5 )

[node name="Down" type="Area2D" parent="HBoxContainer/Panel/ViewportContainer/Viewport/Camera2D"]
position = Vector2( 56, 16 )
collision_layer = 0
collision_mask = 8
script = ExtResource( 6 )
input_key = "ui_down"

[node name="CollisionShape2D" type="CollisionShape2D" parent="HBoxContainer/Panel/ViewportContainer/Viewport/Camera2D/Down"]
shape = SubResource( 4 )

[node name="Button" type="Sprite" parent="HBoxContainer/Panel/ViewportContainer/Viewport/Camera2D/Down"]
texture = ExtResource( 3 )

[node name="Right" type="Area2D" parent="HBoxContainer/Panel/ViewportContainer/Viewport/Camera2D"]
position = Vector2( 78, 16 )
collision_layer = 0
collision_mask = 8
script = ExtResource( 6 )
input_key = "ui_right"

[node name="CollisionShape2D" type="CollisionShape2D" parent="HBoxContainer/Panel/ViewportContainer/Viewport/Camera2D/Right"]
shape = SubResource( 5 )

[node name="Button" type="Sprite" parent="HBoxContainer/Panel/ViewportContainer/Viewport/Camera2D/Right"]
texture = ExtResource( 2 )

[node name="Left" type="YSort" parent="HBoxContainer/Panel/ViewportContainer/Viewport"]
position = Vector2( 12, 0 )
script = ExtResource( 12 )

[node name="Up" type="YSort" parent="HBoxContainer/Panel/ViewportContainer/Viewport"]
position = Vector2( 34, 0 )
script = ExtResource( 12 )
direction = 1

[node name="Down" type="YSort" parent="HBoxContainer/Panel/ViewportContainer/Viewport"]
position = Vector2( 56, 0 )
script = ExtResource( 12 )
direction = 2

[node name="Right" type="YSort" parent="HBoxContainer/Panel/ViewportContainer/Viewport"]
position = Vector2( 78, 0 )
script = ExtResource( 12 )
direction = 3

[node name="Combo" type="Label" parent="HBoxContainer/Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -45.0
margin_top = 13.0
margin_right = 45.0
margin_bottom = 27.0
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 0.478431, 0.266667, 0.290196, 1 )
custom_colors/font_color_shadow = Color( 0.74902, 0.47451, 0.345098, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 1
text = "100 combo"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer2" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 147.0
margin_right = 200.0
margin_bottom = 150.0
size_flags_horizontal = 3

[node name="ProgressBar" type="ProgressBar" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 28.0
margin_top = -3.0
margin_right = 148.0
margin_bottom = 1.0
rect_rotation = -90.0
rect_pivot_offset = Vector2( 60, 0 )
value = 50.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="add_note" from="." to="HBoxContainer/Panel/ViewportContainer/Viewport/Left" method="_on_Karaoke_add_note"]
[connection signal="add_note" from="." to="HBoxContainer/Panel/ViewportContainer/Viewport/Up" method="_on_Karaoke_add_note"]
[connection signal="add_note" from="." to="HBoxContainer/Panel/ViewportContainer/Viewport/Down" method="_on_Karaoke_add_note"]
[connection signal="add_note" from="." to="HBoxContainer/Panel/ViewportContainer/Viewport/Right" method="_on_Karaoke_add_note"]
[connection signal="end" from="." to="HBoxContainer/Panel/ViewportContainer/Viewport/Camera2D/Left" method="_on_Karaoke_end"]
[connection signal="end" from="." to="HBoxContainer/Panel/ViewportContainer/Viewport/Camera2D/Up" method="_on_Karaoke_end"]
[connection signal="end" from="." to="HBoxContainer/Panel/ViewportContainer/Viewport/Camera2D/Down" method="_on_Karaoke_end"]
[connection signal="end" from="." to="HBoxContainer/Panel/ViewportContainer/Viewport/Camera2D/Right" method="_on_Karaoke_end"]
[connection signal="end" from="." to="HBoxContainer/Panel/ViewportContainer/Viewport/Left" method="_on_Karaoke_end"]
[connection signal="end" from="." to="HBoxContainer/Panel/ViewportContainer/Viewport/Up" method="_on_Karaoke_end"]
[connection signal="end" from="." to="HBoxContainer/Panel/ViewportContainer/Viewport/Down" method="_on_Karaoke_end"]
[connection signal="end" from="." to="HBoxContainer/Panel/ViewportContainer/Viewport/Right" method="_on_Karaoke_end"]
[connection signal="start" from="." to="HBoxContainer/Panel/ViewportContainer/Viewport/Camera2D/Left" method="_on_Karaoke_start"]
[connection signal="start" from="." to="HBoxContainer/Panel/ViewportContainer/Viewport/Camera2D/Up" method="_on_Karaoke_start"]
[connection signal="start" from="." to="HBoxContainer/Panel/ViewportContainer/Viewport/Camera2D/Down" method="_on_Karaoke_start"]
[connection signal="start" from="." to="HBoxContainer/Panel/ViewportContainer/Viewport/Camera2D/Right" method="_on_Karaoke_start"]
[connection signal="area_entered" from="HBoxContainer/Panel/ViewportContainer/Viewport/Camera2D/Left" to="HBoxContainer/Panel/ViewportContainer/Viewport/Camera2D/Left" method="_on_area_entered"]
[connection signal="area_exited" from="HBoxContainer/Panel/ViewportContainer/Viewport/Camera2D/Left" to="HBoxContainer/Panel/ViewportContainer/Viewport/Camera2D/Left" method="_on_area_exited"]
[connection signal="hit" from="HBoxContainer/Panel/ViewportContainer/Viewport/Camera2D/Left" to="." method="_on_hit"]
[connection signal="miss" from="HBoxContainer/Panel/ViewportContainer/Viewport/Camera2D/Left" to="." method="_on_miss"]
[connection signal="area_entered" from="HBoxContainer/Panel/ViewportContainer/Viewport/Camera2D/Up" to="HBoxContainer/Panel/ViewportContainer/Viewport/Camera2D/Up" method="_on_area_entered"]
[connection signal="area_exited" from="HBoxContainer/Panel/ViewportContainer/Viewport/Camera2D/Up" to="HBoxContainer/Panel/ViewportContainer/Viewport/Camera2D/Up" method="_on_area_exited"]
[connection signal="hit" from="HBoxContainer/Panel/ViewportContainer/Viewport/Camera2D/Up" to="." method="_on_hit"]
[connection signal="miss" from="HBoxContainer/Panel/ViewportContainer/Viewport/Camera2D/Up" to="." method="_on_miss"]
[connection signal="area_entered" from="HBoxContainer/Panel/ViewportContainer/Viewport/Camera2D/Down" to="HBoxContainer/Panel/ViewportContainer/Viewport/Camera2D/Down" method="_on_area_entered"]
[connection signal="area_exited" from="HBoxContainer/Panel/ViewportContainer/Viewport/Camera2D/Down" to="HBoxContainer/Panel/ViewportContainer/Viewport/Camera2D/Down" method="_on_area_exited"]
[connection signal="hit" from="HBoxContainer/Panel/ViewportContainer/Viewport/Camera2D/Down" to="." method="_on_hit"]
[connection signal="miss" from="HBoxContainer/Panel/ViewportContainer/Viewport/Camera2D/Down" to="." method="_on_miss"]
[connection signal="area_entered" from="HBoxContainer/Panel/ViewportContainer/Viewport/Camera2D/Right" to="HBoxContainer/Panel/ViewportContainer/Viewport/Camera2D/Right" method="_on_area_entered"]
[connection signal="area_exited" from="HBoxContainer/Panel/ViewportContainer/Viewport/Camera2D/Right" to="HBoxContainer/Panel/ViewportContainer/Viewport/Camera2D/Right" method="_on_area_exited"]
[connection signal="hit" from="HBoxContainer/Panel/ViewportContainer/Viewport/Camera2D/Right" to="." method="_on_hit"]
[connection signal="miss" from="HBoxContainer/Panel/ViewportContainer/Viewport/Camera2D/Right" to="." method="_on_miss"]
